; ModuleID = '/home/carl/AnghaBench/netdata/backends/mongodb/extr_mongodb.c_free_bson.c'
source_filename = "/home/carl/AnghaBench/netdata/backends/mongodb/extr_mongodb.c_free_bson.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_bson(i32** %0, i64 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32** %0, i32*** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %16, %2
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ult i64 %7, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %6
  %11 = load i32**, i32*** %3, align 8
  %12 = load i64, i64* %5, align 8
  %13 = getelementptr inbounds i32*, i32** %11, i64 %12
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @bson_destroy(i32* %14)
  br label %16

16:                                               ; preds = %10
  %17 = load i64, i64* %5, align 8
  %18 = add i64 %17, 1
  store i64 %18, i64* %5, align 8
  br label %6

19:                                               ; preds = %6
  %20 = load i32**, i32*** %3, align 8
  %21 = call i32 @free(i32** %20)
  ret void
}

declare dso_local i32 @bson_destroy(i32*) #1

declare dso_local i32 @free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
